[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-converter"
version = "4.12.0"
requires-python = ">= 3.10"
description = "Convert ebook between different formats"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "css-parser>=1.0.6",
    "filelock>=3.0.12",
    "html2text>=2020.1.16",
    "html5-parser==0.4.12",
    "msgpack>=1.0.0",
    "odfpy>=1.4.1",
    "pillow>=8.0.1",
    "python-dateutil>=2.8.1",
    "setuptools>=61.0",
    "tinycss>=0.4"
]
readme = "README.rst"
authors = [
    {name = "gryf", email = "gryf73@gmail.com"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/gryf/ebook-converter"

[project.scripts]
ebook-converter = "ebook_converter.main:main"

[tool.setuptools.packages.find]
exclude = ["snap"]

[tool.setuptools.package-data]
"*" = ["*.types", "*.css", "*.html", "*.xhtml", "*.xsl", "*.json"]
