[metadata]
name = ebook-converter
version = 4.9.1
summary = Convert ebook between different formats
description-file =
    README.rst
author = gryf
author-email = gryf73@gmail.com
license = GPL3
license_file = LICENSE
url = https://github.com/gryf/ebook-converter
classifier =
    Environment :: Console
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires = 
    filelock
    python-dateutil
    lxml
    css-parser
    beautifulsoup4
    tinycss
    pillow
    msgpack
    html5-parser
    odfpy

[options.entry_points]
console_scripts =
    ebook-converter=ebook_converter.main:run
